bdd tests in bootstrap ok except error handling